<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <dreamguys.in.co.gigs.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select your payment method"
        android:textSize="@dimen/_12sdp"
        app:fontName="@string/font_bold" />


    <RadioGroup
        android:id="@+id/rg_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="Paypal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="Stripe" />
    </RadioGroup>


    <dreamguys.in.co.gigs.utils.CustomButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_rectangular_green_shape"
        android:ems="8"
        android:gravity="center"
        android:onClick="buyNow"
        android:padding="@dimen/_5sdp"
        android:text="@string/text_buy_now"
        android:textColor="@android:color/white"
        app:fontName="@string/font_bold" />


    <dreamguys.in.co.gigs.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_account_balance_wallet_grey_600_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="Your deposit will be securely held in Escrow until you are happy to release it to the Seller upon Hourlie completion."
        android:textSize="@dimen/_12sdp"
        app:fontName="@string/font_regular" />


</LinearLayout>